k8s/react-service.yml
apiVersion: v1
kind: Service
metadata:
  name: movewave-react-service
  namespace: movewave
spec:
  selector:
    app: movewave-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
